--- a/DH_BugTracker/Views/Shared/_Layout.cshtml
+++ b/DH_BugTracker/Views/Shared/_Layout.cshtml
@@ -1,14 +1,5 @@
-﻿@using DH_BugTracker.Models;
-@using DH_BugTracker.Helpers;
-@using Microsoft.AspNet.Identity;
-
-@{
-    ApplicationDbContext db = new ApplicationDbContext();
-    UserRolesHelper roles = new UserRolesHelper();
-    var urRole = roles.ListUserRoles(User.Identity.GetUserId()).FirstOrDefault();
-    var displayName = db.Users.Find(User.Identity.GetUserId()).DisplayName;
-    var avatarPath = db.Users.Find(User.Identity.GetUserId()).AvatarPath;
-}
+﻿@using DH_BugTracker.Helpers;
+@using DH_BugTracker.Extensions;
 
 <!DOCTYPE html>
 <html lang="en">
@@ -49,14 +40,14 @@
             -->
             <div class="row no-gutters">
                 <div class="col-5" style="border-bottom:1px solid #E5E5E5;z-index:2">
-                    <img id="avatarImg" class="rounded-circle" src="@avatarPath" />
+                    <img id="avatarImg" class="rounded-circle" src="@User.Identity.GetAvatarPath()" />
                 </div>
                 <div class="col logo">
                     <span class="simple-text">
                         Welcome,
                     </span>
                     <h6 class="text-center no-gutters" style="line-height:32px">
-                        @displayName
+                        @User.Identity.GetDisplayName()
                     </h6>
                 </div>
             </div>
@@ -87,6 +78,12 @@
                                 <p><b>Manage Project Users</b></p>
                             </a>
                         </li>
+                        <li class="nav-item ">
+                            <a class="nav-link" href="~/TicketHistory/Index">
+                                <i class="material-icons">list</i>
+                                <p><b>Ticket History Index</b></p>
+                            </a>
+                        </li>
                     }
                     @if (User.Identity.IsAuthenticated)
                     {
@@ -115,11 +112,10 @@
         <div class="main-panel">
             <!-- Navbar -->
             <nav class="navbar navbar-expand-lg navbar-absolute fixed-top" style="background-color:white; border:1px #E5E5E5 solid">
-                @*;position:fixed;margin-left:259px;max-width:84%;z-index:1*@
                 <div class="container-fluid">
                     <div class="navbar-wrapper">
                         <span class="navbar-brand">
-                            Logged in as: <b>@(urRole != null ? urRole : "Not Assigned")</b>
+                            Logged in as: <b>@User.Identity.GetRoleName()</b>
                         </span>
                     </div>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
@@ -190,7 +186,7 @@
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownProfile">
                                     <a class="dropdown-item" href="~/Manage/EditUser">Profile</a>
-                                    <a class="dropdown-item" href="~/Manage/Index">Settings</a>
+                                    <!-- <a class="dropdown-item" href="~/Manage/Index">Settings</a> -->
                                     <div class="dropdown-divider"></div>
                                     @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
                                     {
@@ -271,6 +267,15 @@
                 text: message
             })
             @{HttpContext.Current.Session.Remove("Message");}
+        };
+
+        var errors = '@TempData["Errors"]';
+        if (errors != '') {
+            Swal.fire({
+                icon: 'error',
+                title: 'Oops!',
+                html: errors.split("|").join("<br />")
+            })
         };
 
         $(document).ready(function () {
