--- a/DH_BugTracker/Views/TicketHistory/Index.cshtml
+++ b/DH_BugTracker/Views/TicketHistory/Index.cshtml
@@ -1,63 +1,79 @@
 ﻿@model IEnumerable<DH_BugTracker.Models.TicketHistory>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Ticket History Index";
 }
+    <div class="row">
+        <div class="col-md-10 offset-1">
+            <div class="card">
+                <div class="card-header card-header-info">
+                    <h4 class="card-title ">@ViewBag.title</h4>
+                    <p class="card-category" style="padding-left:10px">All Ticket Histories in the database.</p>
+                </div>
+                <div class="card-body">
+                    <div class="table-responsive">
+                        <table class="table" id="indexHistory">
+                            <thead>
+                                <tr>
+                                    <th>
+                                        @Html.DisplayName("Ticket Title")
+                                    </th>
+                                    <th>
+                                        @Html.DisplayName("Creator Name")
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.Property)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayName("Old Value")
+                                    </th>
+                                    <th>
+                                        @Html.DisplayName("New Value")
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.Changed)
+                                    </th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var item in Model)
+                                {
+                                    <tr>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Ticket.Title)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.User.FullName)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Property)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.OldValue)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.NewValue)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Changed)
+                                        </td>
+                                        <td>
+                                            @Html.ActionLink("Edit", "Edit", new { id = item.Id })
+                                            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Ticket.Title)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.User.FirstName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Property)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.OldValue)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.NewValue)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Changed)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Ticket.Title)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.User.FirstName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Property)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.OldValue)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NewValue)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Changed)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
+@section scripts{
+    <script>
+        $("#indexHistory").dataTable();
+    </script>
 }
-
-</table>
