icon naming conventions

--- a/DH_BugTracker/Views/Ticket/Details.cshtml
+++ b/DH_BugTracker/Views/Ticket/Details.cshtml
@@ -254,7 +254,7 @@
                             {
                                 <tr>
                                     <td>
-                                        <a href="@attachment.FilePath">
+                                        <a href="@attachment.FilePath" target="_blank">
                                             <img src="@AttachmentHelper.GetIcon(attachment.FilePath)" style="width:35px" />
                                             @{var displayPath = attachment.FilePath.Split('/')[2].Split('_')[0]
                                                       + Path.GetExtension(attachment.FilePath);}
